# CMake-Formatter

./: LICENSE
formatter/: CMakeFile.py  argument_parser.py  cmake_formatter.py  cmake_parser.py
test/data/: CMakeLists.txt
